# NetWatch-SIEM

./: .gitignore  .replit  NetWatch SIEM.md  README.md  app.py  config.py  cookies.txt  debug_i18n.py  netwatch-siem-requirements.txt  netwatch.db  netwatch.db-journal  pyproject.toml  replit.md  test_api.py  test_improved_scan.py
.local/state/replit/agent/filesystem/: filesystem_state.json
analytics/: __init__.py
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-class-dark-head-meta-charset-UTF-8-meta-name-view-1760223345385_1760223345387.txt  Pasted-Project-Title-NetWatch-SIEM-Intelligent-Network-Device-Monitoring-System-Developer-John-Mark--1760223182937_1760223182939.txt
database/: init_db.py  models.py
i18n/: __init__.py
i18n/translations/: de.json  en.json  es.json  fr.json  zh.json
models/: __init__.py  user.py
monitoring/: __init__.py  advanced_scanner.py  traffic_analyzer.py
rules/: alert_engine.py  condition_metadata.py  smart_alert_engine.py
scanner/: device_scanner.py  enhanced_scanner.py  hostname_resolver.py  network_scanner.py
security/: __init__.py  auth.py  rbac.py  schemas.py
static/css/: cyber-theme.css  main.css
static/js/: alerts.js  analytics.js  dashboard.js  devices-list.js  devices.js  realtime.js
templates/: alerts.html  analytics.html  base.html  config.html  dashboard.html  devices.html  login.html  logs.html  register.html  rules.html  users.html
utils/: cache.py
