[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dnspython>=2.8.0",
    "flask>=3.1.2",
    "flask-socketio>=5.5.1",
    "psutil>=7.1.0",
    "python-nmap>=0.7.1",
    "requests>=2.32.5",
    "scapy>=2.6.1",
    "werkzeug>=3.1.3",
]
